# LOL_Classification

./: CMakeLists.txt  README.md
data/Anny/cropped/: filelist.txt
data/whole/: test.txt  train.txt
model/: svm.model
src/: main_preprocess.cpp  main_svm_pred.cpp  main_svm_train.cpp  utils.cpp  utils.h
